[metadata]
name = py-algorithms
description = A project for discovering algorithms in Python.
author = Heinz Stecher
licence = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
packages =
    algorithms
python_requires = >=3.8
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing = 
    flake8==6.0.0
    pytest==7.2.1
    pytest-benchmark==4.0.0
    pytest-cov==4.0.0
    pytest-html==3.2.0
    mypy==0.991
    tox==4.4.4

[options.package_data]
algorithms = py.typed

[flake8]
max-line-length = 222
